ahora se puede abrir el MayorGeneral desde la ventana de Cuenta, ahora se puede abrir el formulario desde LibroDiarioView y BalanceComView